--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 91
-</p><p class="card-text">Number of spectra: 6841
-</p><p class="card-text">Last update: 2021-10-02, 16:34</p>
+<p class="card-text">Number of stars: 92
+</p><p class="card-text">Number of spectra: 6850
+</p><p class="card-text">Last update: 2021-10-02, 17:20</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1221,6 +1221,18 @@
       <td>30</td>
       <td>2</td>
       <td>1.0</td>
+    </tr>
+    <tr>
+      <td><a href="hen4-204.html">Hen 4-204</a></td>
+      <td>22 45 01.41</td>
+      <td>-44 52 38.45</td>
+      <td>9</td>
+      <td>2020-07-30</td>
+      <td>2021-09-08</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
     </tr>
   </tbody>
 </table><br><br>
