--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 92
-</p><p class="card-text">Number of spectra: 6850
-</p><p class="card-text">Last update: 2021-10-02, 17:20</p>
+<p class="card-text">Number of stars: 93
+</p><p class="card-text">Number of spectra: 6849
+</p><p class="card-text">Last update: 2021-10-03, 08:13</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1226,10 +1226,22 @@
       <td><a href="hen4-204.html">Hen 4-204</a></td>
       <td>22 45 01.41</td>
       <td>-44 52 38.45</td>
-      <td>9</td>
+      <td>7</td>
       <td>2020-07-30</td>
       <td>2021-09-08</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="hen3-1410.html">Hen 3-1410</a></td>
+      <td>17 29 06.20</td>
+      <td>-29 43 17.59</td>
+      <td>1</td>
+      <td>2020-07-23</td>
+      <td>2020-07-23</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-23 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>2.0</td>
