--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 95
-</p><p class="card-text">Number of spectra: 7073
-</p><p class="card-text">Last update: 2021-10-04, 18:32</p>
+<p class="card-text">Number of stars: 96
+</p><p class="card-text">Number of spectra: 7077
+</p><p class="card-text">Last update: 2021-10-04, 18:51</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -158,7 +158,7 @@
       <td><a href="agpeg.html">AG Peg</a></td>
       <td>21 51 01.97</td>
       <td>+12 37 32.12</td>
-      <td>359</td>
+      <td>360</td>
       <td>2009-12-06</td>
       <td>2021-09-23</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-23 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -830,10 +830,10 @@
       <td><a href="v1413aql.html">V1413 Aql</a></td>
       <td>19 03 46.84</td>
       <td>+16 26 16.97</td>
-      <td>65</td>
+      <td>66</td>
       <td>2013-08-10</td>
-      <td>2021-07-11</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2021-09-15</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>1.0</td>
@@ -1266,6 +1266,18 @@
       <td>2020-05-26</td>
       <td>2020-07-23</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-07-23 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="dqser.html">DQ Ser</a></td>
+      <td>18 44 39.62</td>
+      <td>+05 02 49.08</td>
+      <td>2</td>
+      <td>2021-07-08</td>
+      <td>2021-07-10</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>2.0</td>
