--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 96
-</p><p class="card-text">Number of spectra: 7077
-</p><p class="card-text">Last update: 2021-10-04, 18:51</p>
+<p class="card-text">Number of stars: 100
+</p><p class="card-text">Number of spectra: 7088
+</p><p class="card-text">Last update: 2021-10-04, 20:05</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1278,6 +1278,54 @@
       <td>2021-07-08</td>
       <td>2021-07-10</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="ss73122.html">SS73 122</a></td>
+      <td>18 04 41.22</td>
+      <td>-27 09 12.42</td>
+      <td>2</td>
+      <td>2021-05-10</td>
+      <td>2021-05-15</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="ss73117.html">SS73 117</a></td>
+      <td>18 02 23.0</td>
+      <td>-31 59 11</td>
+      <td>2</td>
+      <td>2021-07-06</td>
+      <td>2021-07-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="uuser.html">UU Ser</a></td>
+      <td>17 42 38.29</td>
+      <td>-15 24 26.13</td>
+      <td>2</td>
+      <td>2021-07-06</td>
+      <td>2021-07-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="v1044cen.html">V1044 Cen</a></td>
+      <td>13 16 01.37</td>
+      <td>-37 00 10.77</td>
+      <td>5</td>
+      <td>2020-05-25</td>
+      <td>2021-05-14</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-14 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>2.0</td>
